Updated views, urls and admin. Added forms.py, listing.html and create.html. 1) added functionality to create listings with a form. 2) updated index.html to display listings in the model sorted descending by date    created. 3) updated models to change bid,comment to listing relationship as many to one.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,6 +2,21 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-
-    TODO
+    <hr>
+    <ul>
+        {% for listing in listings %}
+            {% if listing.open %}     
+                <li>
+                    <div><h4>{{ listing.name }}</h4></div>
+                    <div><h5>Category: {{ listing.category }}</h5></div>
+                    {% if bid.bid_value %}
+                    <div><h5>Current Bid: ${{ bid.bid_value }}</h5></div>
+                    {% else %}
+                    <div><h5>Starting Bid: ${{ listing.bid_start }}</h5></div>
+                    {% endif %}
+                    <div><a href="{% url 'listing' listing.id %}"><img src="{{ listing.image_url }}" alt="image of listing" width="400"></a></div>
+                </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
 {% endblock %}
