added biding functionality to listings. 1) the bid will register all bids from all users including the owner. 2) listing page will reflect the current highest bid and bidder once a    bid is logged.
Areas to improve:
1) minimum bid not implemented, it should be >= starting bid on listing
   then > largest bid_value on listing.
2) users can make bids below their existing bids.
3) Index page does not reflect the current bid of the listing.

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -10,10 +10,22 @@
             <input type="submit" value="Delete Listing">
         </form> 
     {% endif %}
-    <h4>Created by: {{listing.user.username}}</h4>    
+    <h4>Created by: {{ listing.user.username }}</h4>    
     <h4>{{ listing.name }}</h4>
     <h4>{{ listing.category }}</h4>
-    <h4>Starting Bid: ${{ listing.bid_start }}</h4>
+    {% if bid %}
+        <h4>Current Bid: ${{ bid }}</h4>
+        <h4>Bid by: {{ username }}</h4>
+    {% else %}
+        <h4>Starting Bid: ${{ listing.bid_start }}</h4>
+    {% endif %}
+    {% if user.is_authenticated %}
+        <form method="POST" action="">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Make Bid">
+        </form>
+    {% endif %}
     <img src="{{ listing.image_url }}" alt="Listing image" width="400px">
     <div><span>{{ listing.description }}</span></div>
 {% endblock %}
