--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -22,7 +22,7 @@
     {% if user.is_authenticated %}
         <form method="POST" action="">
             {% csrf_token %}
-            {{ form }}
+            {{ form.as_p }}
             <input type="submit" value="Make Bid">
         </form>
     {% endif %}
