added watchlist feature. 1) displays add watchlist on all listings for user. 2) on click, watchlist adds listing to itself. 3) if user and listing pair exists it deletes watch instead. 4) when user makes bid, it automatically adds to watchlist if unadded.
issues:
1) currently a winning user can unwatch the listing. which removes
   user's ability to find the listing on the site.

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -11,7 +11,7 @@
         </form>
         <form method="POST" action="{% url 'close' listing.id %}">
             {% csrf_token %}
-            <input type="submit" value="CLose Lising">
+            <input type="submit" value="Close Lising">
         </form> 
     {% endif %}
     <h4>Created by: {{ listing.user.username }}</h4>    
@@ -28,6 +28,11 @@
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Make Bid">
+        </form>
+        <form method ="POST" action="">
+            {% csrf_token %}
+            <input type="hidden" name="add_watch" value="True">
+            <input type="submit" value="Add to Watchlist">
         </form>
     {% endif %}
     <img src="{{ listing.image_url }}" alt="Listing image" width="400px">
