created initial models and updated views. Index HTML now shows all posts in reverse chronological order.

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,11 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+    {%for content in context %}
+        <div class="post">
+            {{ content }}
+            {{ content.content}} on {{ content.created_at}}
+            likes: {{content.likecount}}
+        </div>
+    {% endfor%}
 {% endblock %}
