(1) Updated index.html to display all posts in reverse chronological order. (2) Added profile.html that displays the profile page of a user when their link is clicked. It displays all their posts and the counts of followers and following.
Next Tasks:
(1) Add functionality to the follow and unfollow buttons in the
profile page.
(2) Allow auth users to CRUD posts.

--- a/network/templates/network/post.html
+++ b/network/templates/network/post.html
@@ -1,13 +1,11 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    {%for context in context %}
         <div class="post">
-            <a href="{% url 'profile' username=context.user.username %}">@{{ context.user }}</a>
+            <p>{{ context }}</p>
             <hr>
             <p>{{ context.content}}</p>
             <hr>
             <p>{{ context.created_at}} likes: {{context.likecount}}</p>
         </div>
-    {% endfor%}
 {% endblock %}
