Added functionality to Follow and Unfollow button.
To improve:
-make followers and following count dynamic with JS.

To Do:
(1) CRUD for posts for user.is_auth.
(1b) Editing of posts should be dynamic
(2) Dynamic like functionality
(3) Pagination for every 10 posts

--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -2,12 +2,12 @@
 
 {% block body %}
     <div class="profile">
-        <h2>{{ context }}</h2>
+        <h2>{{ context.username }}</h2>
         {% if user.is_authenticated and user != context %}
-            {% if context in user.following.all %}
-                <button>Unfollow</button>
+            {% if follower %}
+            <button id="follow-button" data-user-id="{{ context.id }}" data-following="{{ follower }}">Unfollow</button>
             {% else %}
-                <button>Follow</button>
+            <button id="follow-button" data-user-id="{{ context.id }}" data-following="{{ follower }}">Follow</button>
             {% endif %}
         {% endif %} 
         <h4>Followers: {{followers}} Following: {{following}} </h4>
